--- a/mads.ini
+++ b/mads.ini
@@ -1,6 +1,10 @@
-################################################################################
-# Settings common to all agents
-################################################################################
+#   ____                                      
+#  / ___|___  _ __ ___  _ __ ___   ___  _ __  
+# | |   / _ \| '_ ` _ \| '_ ` _ \ / _ \| '_ \ 
+# | |__| (_) | | | | | | | | | | | (_) | | | |
+#  \____\___/|_| |_| |_|_| |_| |_|\___/|_| |_|
+# 
+
 [agents]
 # Settings shared by all agents
 frontend_address = "tcp://localhost:9090"
@@ -8,17 +12,20 @@ backend_address = "tcp://localhost:9091"
 log_level = "debug"
 compress = true
 
-################################################################################
-# BROKER
-################################################################################
+
+#  __  __                   _ _ _   _     _      
+# |  \/  | ___  _ __   ___ | (_) |_| |__ (_) ___ 
+# | |\/| |/ _ \| '_ \ / _ \| | | __| '_ \| |/ __|
+# | |  | | (_) | | | | (_) | | | |_| | | | | (__ 
+# |_|  |_|\___/|_| |_|\___/|_|_|\__|_| |_|_|\___|
+#                                                
+
 [broker]
 frontend_address = "tcp://*:9090"
 backend_address = "tcp://*:9091"
 settings_address = "tcp://*:9092"
 
-################################################################################
-# LOGGER
-################################################################################
+
 [logger]
 mongo_uri = "mongodb://localhost:27017"
 mongo_db = "mads_test"
@@ -28,63 +35,17 @@ sub_topic = [""]
 max_length = 75
 initially_paused = false
 
-################################################################################
-# IMAGE
-################################################################################
-[image]
-watch_list = {img = "image.jpg", image = "test.txt", prova = "prova.txt"}
 
-################################################################################
-# BRIDGE
-################################################################################
 [bridge]
 # default publish topic (if not passed via CLI)
 pub_topic = "bridge"
 
-################################################################################
-# FEEDBACK
-################################################################################
+
 [feedback]
 # Subscribes to ALL topics
 sub_topic = [""]
 
-################################################################################
-# STATS
-################################################################################
-[stats]
-sub_topic = ["skeleton"]
-pub_topic = "stats"
 
-################################################################################
-# FORCE PLATFORM
-################################################################################
-[force_platform]
-time_step = 500
-image = "data/fp_demo.png"
-pub_topic = "force_platform"
-# Phisycal size (in mm)
-platform_size = {x = 1230.0, y = 565.0}
-# factor to convert raw data [0-255] to Newtons
-force_conversion_factor = 0.586 # Max 150 N/cm^2
-# noise threshold
-clean_threshold = 60.0
-# DBSCAN parameters
-epsilon = 30.0
-min_pts = 10
-# JSON includes clusters as sparse matrices
-include_clusters = false
-# JSON also includes raw data as sparse matrix
-include_raw_data = false
-# dummy resoluction
-dummy_pts = {x = 20, y = 30}
-# Coord transform
-coord_transform = {rot = 0.0, dx = 0.0, dy = 0.0}
-# Enable coord transform, default: true if any
-#enable_transform = true 
-
-################################################################################
-# METADATA
-################################################################################
 [metadata]
 # Topic to publish to (single string!)
 pub_topic = "metadata"
@@ -94,103 +55,34 @@ gpio_chip_path = "/dev/gpiochip0"
 # GPIO lines to poll
 gpio_lines = [21,22,23,24]
 
-################################################################################
-# RFID
-################################################################################
-[rfid]
-# Topic to publish to (single string!)
-pub_topic = "rfid"
-data_length = 50
 
-################################################################################
-# ECHOJ
-################################################################################
+[perf_assess]
+pub_topic = "perf_assess"
+
+
+
+#  ____  _             _           
+# |  _ \| |_   _  __ _(_)_ __  ___ 
+# | |_) | | | | |/ _` | | '_ \/ __|
+# |  __/| | |_| | (_| | | | | \__ \
+# |_|   |_|\__,_|\__, |_|_| |_|___/
+#                |___/             
+#
+
+[restway]
+pub_topic = "restway"
+url = "http://localhost:5443/job/descriptions"
+delay = 500
+
+
 [echoj]
 # Topic to publish to (single string!)
 pub_topic = "echoj"
 sub_topic = ["rfid"]
 
-################################################################################
-# WEBCAM
-################################################################################
-[webcam]
-# Topic to publish to (single string!)
-pub_topic = "webcam"
-device = 0
-image_name = "image.jpg"
-flip = true
 
-################################################################################
-# SKELETON 3D
-################################################################################
-[skeletonizer3D]
-# Topic to publish to (single string!)
-pub_topic = "skeletonizer3D"
-device = 0
-CUDA = true
-model_file = "../plugin_skeletonizer_3D/models/human-pose-estimation-0001.xml"
-dummy = false
-resolution_rgb = "1024x768"
-debug = {acquire_frame = true, skeleton_from_depth_compute = false, skeleton_from_rgb_compute = false, hessian_compute = false, cov3D_compute = false, consistency_check = false, point_cloud_filter = false, coordinate_transfrom = false, viewer = false }
-
-################################################################################
-# PARF_ASSESS (Performance Assessment) #########################################
-################################################################################
-[perf_assess]
-pub_topic = "perf_assess"
-
-################################################################################
-# CLOCK
-################################################################################
 [clock]
 # Topic to publish to (single string!)
 pub_topic = "clock"
 
 
-################################################################################
-# DUMMY
-################################################################################
-[dummy]
-active_topics = ["skeleton", "metadata", "image", "platform", "rfid"]
-
-[dummy.topics.skeleton]
-type = "arima"
-[dummy.topics.skeleton.content]
-j1 = {p = [0.7, 0.2], d=2, q=[0.5], s=0.1}
-j2 = {p = [0.7], d=2, q=[0.5], s=0.1, start=10.0}
-j3 = {p = [0.5, 0.5], d=1, q=[], s=0.1}
-
-[dummy.topics.metadata]
-type = "gpio"
-frequency = 3 # 1/3 of the base frequency
-[dummy.topics.metadata.content]
-lines = [21, 22, 23]
-
-
-[dummy.topics.image]
-type = "image"
-frequency = 7
-[dummy.topics.image.content]
-size = [10, 10]
-levels = 1024
-
-[dummy.topics.platform]
-type = "matrix"
-frequency = 10
-[dummy.topics.platform.content]
-size = [20, 20]
-mean = 30.0
-std = 2.0
-
-[dummy.topics.rfid]
-type = "bits"
-frequency = 5
-[dummy.topics.rfid.content]
-first = 0.2
-second = 0.8
-third = 0.5
-
-[wrapper]
-pub_topic = "wrapper"
-desc = "This is a dummy agent for the Python wrapper"
-values = [1, 2, 3, 4, 5]
