Renamed and fixed GUIL compilation

--- a/src/mads.hpp.in
+++ b/src/mads.hpp.in
@@ -155,9 +155,12 @@ static const std::map<event_type, std::string> event_map = {
     {event_type::startup, "startup"},
     {event_type::shutdown, "shutdown"}};
 
+// This results in duplicate definition link error in the GUI
+#ifndef MADS_QAGENT_H
 std::string event_name(event_type type) {
   return event_map.at(type);
 }
+#endif // MADS_QAGENT_H
 
 /**
  * @brief Get the ISODate time object
