--- a/mads.ini
+++ b/mads.ini
@@ -86,4 +86,17 @@ sub_topic = ["rfid"]
 pub_topic = "clock"
 period = 200
 
+[random]
+number_of_elements = 3
 
+[random.test1]
+prova = "ciao"
+
+[serial_reader]
+port="/dev/ttyACM0"
+baudrate=115200
+
+[mqtt]
+broker_host="localhost"
+broker_port=1883
+topic = "mads/#"
