Improved printout of feedback agent (supports pretty-printing and variable width)

--- a/mads.ini
+++ b/mads.ini
@@ -44,7 +44,8 @@ pub_topic = "bridge"
 [feedback]
 # Subscribes to ALL topics
 sub_topic = [""]
-
+print_width = 0
+indent_width = 2
 
 [metadata]
 # Topic to publish to (single string!)
