--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -284,7 +284,7 @@ endif()
 #
 
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-  set(CMAKE_INSTALL_PREFIX ${USR_DIR} CACHE PATH "Installation dir" FORCE)
+  set_property(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE ${USR_DIR})
 endif()
 install(TARGETS ${TARGET_LIST}
   BUNDLE DESTINATION bin
