chore: Update mads.ini with Arduino config serial command

--- a/mads.ini
+++ b/mads.ini
@@ -88,6 +88,8 @@ number_of_elements = 3
 [serial_reader]
 port="/dev/ttyACM0"
 baudrate=115200
+# Arduino config serial command
+cfg_cmd = "40p"
 
 [mqtt]
 broker_host="localhost"
