Adde support for different agent names

--- a/mads.ini
+++ b/mads.ini
@@ -82,6 +82,11 @@ sub_topic = ["rfid"]
 pub_topic = "clock"
 period = 200
 
+[clock_slow]
+# Topic to publish to (single string!)
+pub_topic = "clock_slow"
+period = 2000
+
 [random]
 number_of_elements = 3
 
