Source and sink agents have default plugins. Bump to version 0.9.0

--- a/mads.ini
+++ b/mads.ini
@@ -55,6 +55,8 @@ pub_topic = "metadata"
 [perf_assess]
 pub_topic = "perf_assess"
 
+[publish]
+pub_topic = "publish"
 
 
 #  ____  _             _           
