Added default plugin for mads-filter (acts as bridge)

--- a/mads.ini
+++ b/mads.ini
@@ -38,6 +38,7 @@ initially_paused = false
 
 [bridge]
 # default publish topic (if not passed via CLI)
+sub_topic = ["publish"]
 pub_topic = "bridge"
 
 
