Linux build fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,8 +184,8 @@ if(APPLE)
   include_directories("/opt/homebrew/include")
   link_directories("/opt/homebrew/lib/")
   set(MONGO_LIBS mongocxx bsoncxx)
-else()
-  set(MONGO_LIBS mongocxx-static bsoncxx-static mongoc-static-1.0 bson-static-1.0 resolv)
+elseif(UNIX AND NOT APPLE)
+  set(MONGO_LIBS mongocxx-static bsoncxx-static mongoc-static-1.0 bson-static-1.0 resolv ssl crypto zstd)
 endif()
 
 # Macro for building exec targets
