--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,6 +187,7 @@ if(APPLE)
 elseif(UNIX AND NOT APPLE)
   set(MONGO_LIBS mongocxx-static bsoncxx-static mongoc-static-1.0 bson-static-1.0 resolv)
   if(NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64")
+    # Unexpectedly, these three libraries are not needed on RaspbianOS or aarch64
     set(MONGO_LIBS ${MONGO_LIBS} ssl crypto)
   endif()
 endif()
@@ -341,6 +342,7 @@ elseif(MSVC)
     ${CMAKE_INSTALL_PREFIX}/include ./include
   )
 else()
+  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libzstd1, libssl3")
   set(CPACK_DEBIAN_PACKAGE_NAME MADS)
   set(CPACK_GENERATOR "DEB")
 endif()
