--- a/mads.ini
+++ b/mads.ini
@@ -59,6 +59,15 @@ pub_topic = "perf_assess"
 [publish]
 pub_topic = "publish"
 
+[dealer]
+sub_topic = ["publish"]
+pub_topic = "dealer"
+dealer_address = "tcp://*:9093"
+
+[worker]
+pub_topic = "worker"
+dealer_address = "tcp://localhost:9093"
+
 
 #  ____  _             _           
 # |  _ \| |_   _  __ _(_)_ __  ___ 
