Various fixes and improvements

--- a/mads.ini
+++ b/mads.ini
@@ -60,7 +60,7 @@ pub_topic = "perf_assess"
 pub_topic = "publish"
 
 [dealer]
-sub_topic = ["publish"]
+sub_topic = ["publish", "spawner"]
 pub_topic = "dealer"
 dealer_address = "tcp://*:9093"
 
@@ -115,3 +115,8 @@ topic = "capture/#"
 
 [running_avg]
 sub_topic = ["serial_reader"]
+
+[spawner]
+period_min = 100
+period_max = 5000
+number = 50
