Trying to automatically set Path in Windows installer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,6 +339,9 @@ elseif(MSVC)
   set(CPACK_PACKAGE_INSTALL_DIRECTORY "MADS")
   set(CPACK_INNOSETUP_IGNORE_LICENSE_PAGE ON)
   set(CPACK_INNOSETUP_IGNORE_README_PAGE ON)
+  set(CPACK_INNOSETUP_SETUP_ChangesEnvironment ON)
+  set(CPACK_INNOSETUP_EXTRA_SCRIPTS "${CMAKE_CURRENT_LIST_DIR}/iss/environment.iss")
+  set(CPACK_INNOSETUP_CODE_FILES "${CMAKE_CURRENT_LIST_DIR}/iss/events.iss")
   set(CPACK_INSTALLED_DIRECTORIES 
     ${CMAKE_INSTALL_PREFIX}/lib ./lib
     ${CMAKE_INSTALL_PREFIX}/include ./include
