--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -338,12 +338,13 @@ set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
 set(CPACK_PACKAGE_CONTACT "paolo.bosetti@unitn.it")
 set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/pbosetti/MADS")
 set(CPACK_PACKAGE_DESCRIPTION "MADS installer: Multi-Agent Distributed System")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_LIST_DIR}/LICENSE")
 if(APPLE)
   set(CPACK_GENERATOR "STGZ")
 elseif(MSVC)
   set(CPACK_GENERATOR "ZIP;INNOSETUP")
   set(CPACK_PACKAGE_INSTALL_DIRECTORY "MADS")
-  set(CPACK_INNOSETUP_IGNORE_LICENSE_PAGE ON)
+  set(CPACK_INNOSETUP_IGNORE_LICENSE_PAGE OFF)
   set(CPACK_INNOSETUP_IGNORE_README_PAGE ON)
   set(CPACK_INNOSETUP_SETUP_ChangesEnvironment ON)
   set(CPACK_INNOSETUP_EXTRA_SCRIPTS "${CMAKE_CURRENT_LIST_DIR}/iss/environment.iss")
