FPS can be changed runtime

--- a/mads.ini
+++ b/mads.ini
@@ -9,8 +9,8 @@
 # Settings shared by all agents
 frontend_address = "tcp://localhost:9090"
 backend_address = "tcp://localhost:9091"
-log_level = "debug"
 compress = true
+timecode_fps = 25
 
 
 #  __  __                   _ _ _   _     _      
