--- a/src/mads.hpp.in
+++ b/src/mads.hpp.in
@@ -78,14 +78,19 @@ Author(s): Paolo Bosetti
 
 // Used for common CLI options in agent executables
 #define SETUP_OPTIONS(options, Klass)                                          \
-  options.add_options()("s,settings", "Settings file path/URI",                \
-                        value<string>())(                                      \
-      "S,save-settings", "Save settings to ini file",                          \
-      value<string>())("h,help", "Print usage");                               \
+  options.add_options()                                                        \
+    ("s,settings", "Settings file path/URI", value<string>())                  \
+    ("S,save-settings", "Save settings to ini file", value<string>())          \
+    ("v,version", "Print version")                                             \
+    ("h,help", "Print usage");                                                 \
   auto options_parsed = options.parse(argc, argv);                             \
   if (options_parsed.count("help")) {                                          \
     cout << argv[0] << " ver. " << LIB_VERSION << endl;                        \
     cout << options.help() << endl;                                            \
+    return 0;                                                                  \
+  }                                                                            \
+  if (options_parsed.count("version")) {                                       \
+    cout << LIB_VERSION << endl;                                               \
     return 0;                                                                  \
   }                                                                            \
   if (options_parsed.count("s") != 0) {                                        \
@@ -133,6 +138,12 @@ typedef double data_t;
 */
 
 namespace Mads {
+
+/**
+ * @brief Library version.
+ *
+ */
+static std::string version() { return LIB_VERSION; }
 
 /**
  * @brief Global flag for stopping the main loop in Mads agents.
