--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,13 @@ FetchContent_Declare(plugin
 FetchContent_MakeAvailable(tomlplusplus nlohmann_json cxxopts rang pugg)
 FetchContent_Populate(plugin)
 
+FetchContent_Declare(inja
+  GIT_REPOSITORY https://github.com/pantor/inja.git
+  GIT_TAG        v3.4.0
+  GIT_SHALLOW    TRUE
+)
+
+FetchContent_Populate(inja)
 
 #   ____        _ _     _            _   _   _                 
 #  | __ ) _   _(_) | __| |  ___  ___| |_| |_(_)_ __   __ _ ___ 
@@ -157,6 +164,7 @@ include_directories(
   ${rang_SOURCE_DIR}/include
   ${date_SOURCE_DIR}/include
   ${plugin_SOURCE_DIR}/src
+  ${inja_SOURCE_DIR}/include
 )
 link_directories(${USR_DIR}/lib)
 
@@ -265,7 +273,9 @@ endif()
 # Default plugins
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/plugin)
 
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/man)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/share/man)
+
+create_exec(plugin SRCS make_plugin.cpp)
 
 #   _____      _                        _     
 #  | ____|_  _| |_ ___ _ __ _ __   __ _| |___ 
@@ -307,6 +317,10 @@ install(TARGETS ${TARGET_LIST}
 )
 install(FILES ${CMAKE_CURRENT_LIST_DIR}/mads.ini
   TYPE SYSCONF
+)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/share/templates
+  DESTINATION share
+  COMPONENT MADS
 )
 if(NOT WIN32)
   set(SCRIPTS_FILES 
