--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,12 +206,10 @@ endif()
 macro(create_exec target)
   set(multiValueArgs SRCS LIBS DEFS)
   cmake_parse_arguments(ARG "" "" "${multiValueArgs}" ${ARGN})
-  # set(libs ${ARGV})
-  # list(REMOVE_ITEM libs ${target})
   add_executable(${PREFIX}${target} ${MAIN_DIR}/${ARG_SRCS})
+  list(APPEND TARGET_LIST ${PREFIX}${target})
   target_link_libraries(${PREFIX}${target} ${LIB_LIST} ${ARG_LIBS})
   target_compile_definitions(${PREFIX}${target} PRIVATE ${ARG_DEFS})
-  list(APPEND TARGET_LIST ${PREFIX}${target})
 endmacro()
 
 
@@ -233,6 +231,11 @@ if(NOT MADS_MINIMAL)
     create_exec(image SRCS image.cpp)
   endif()
 endif()
+
+# Main command
+add_executable(mads ${MAIN_DIR}/mads.cpp)
+list(APPEND TARGET_LIST mads)
+
 create_exec(filter SRCS plugin_loader.cpp LIBS pugg ${DLOPEN_LIB} DEFS "PLUGIN_LOADER_FILTER")
 create_exec(source SRCS plugin_loader.cpp LIBS  pugg ${DLOPEN_LIB} DEFS "PLUGIN_LOADER_SOURCE")
 create_exec(sink SRCS plugin_loader.cpp LIBS  pugg ${DLOPEN_LIB} DEFS "PLUGIN_LOADER_SINK")
@@ -324,7 +327,6 @@ install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/share/templates
 )
 if(NOT WIN32)
   set(SCRIPTS_FILES 
-    ${CMAKE_CURRENT_LIST_DIR}/scripts/mads
     ${CMAKE_CURRENT_LIST_DIR}/scripts/mads-logging
     ${CMAKE_CURRENT_LIST_DIR}/scripts/mads-command
   )
@@ -342,38 +344,41 @@ endif()
 #  |_|   \__,_|\___|_|\_\__,_|\__, |_|_| |_|\__, |
 #                              __/ |         __/ |
 #                             |___/         |___/ 
-
-set(CPACK_PACKAGE_NAME "${LIB_NAME}")
-set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LIB_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
-set(CPACK_PACKAGE_VENDOR "MADS Consortium")
-set(CPACK_PACKAGE_DIRECTORY ${CMAKE_SOURCE_DIR}/packages)
-set(CPACK_STRIP_FILES TRUE)
-set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
-set(CPACK_PACKAGE_CONTACT "paolo.bosetti@unitn.it")
-set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/pbosetti/MADS")
-set(CPACK_PACKAGE_DESCRIPTION "MADS installer: Multi-Agent Distributed System")
-set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_LIST_DIR}/LICENSE")
-if(APPLE)
-  set(CPACK_GENERATOR "STGZ")
-elseif(MSVC)
-  set(CPACK_GENERATOR "ZIP;INNOSETUP")
-  set(CPACK_PACKAGE_INSTALL_DIRECTORY "MADS")
-  set(CPACK_INNOSETUP_IGNORE_LICENSE_PAGE OFF)
-  set(CPACK_INNOSETUP_IGNORE_README_PAGE ON)
-  set(CPACK_INNOSETUP_SETUP_ChangesEnvironment ON)
-  set(CPACK_INNOSETUP_EXTRA_SCRIPTS "${CMAKE_CURRENT_LIST_DIR}/iss/environment.iss")
-  set(CPACK_INNOSETUP_CODE_FILES "${CMAKE_CURRENT_LIST_DIR}/iss/events.iss")
-  set(CPACK_INSTALLED_DIRECTORIES 
-    ${CMAKE_INSTALL_PREFIX}/lib ./lib
-    ${CMAKE_INSTALL_PREFIX}/include ./include
-  )
+if(${MADS_SKIP_EXTERNALS})
+  set(CPACK_PACKAGE_NAME "${LIB_NAME}")
+  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LIB_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
+  set(CPACK_PACKAGE_VENDOR "MADS Consortium")
+  set(CPACK_PACKAGE_DIRECTORY ${CMAKE_SOURCE_DIR}/packages)
+  set(CPACK_STRIP_FILES TRUE)
+  set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
+  set(CPACK_PACKAGE_CONTACT "paolo.bosetti@unitn.it")
+  set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/pbosetti/MADS")
+  set(CPACK_PACKAGE_DESCRIPTION "MADS installer: Multi-Agent Distributed System")
+  set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_LIST_DIR}/LICENSE")
+  if(APPLE)
+    set(CPACK_GENERATOR "STGZ")
+  elseif(MSVC)
+    set(CPACK_GENERATOR "ZIP;INNOSETUP")
+    set(CPACK_PACKAGE_INSTALL_DIRECTORY "MADS")
+    set(CPACK_INNOSETUP_IGNORE_LICENSE_PAGE OFF)
+    set(CPACK_INNOSETUP_IGNORE_README_PAGE ON)
+    set(CPACK_INNOSETUP_SETUP_ChangesEnvironment ON)
+    set(CPACK_INNOSETUP_EXTRA_SCRIPTS "${CMAKE_CURRENT_LIST_DIR}/iss/environment.iss")
+    set(CPACK_INNOSETUP_CODE_FILES "${CMAKE_CURRENT_LIST_DIR}/iss/events.iss")
+    set(CPACK_INSTALLED_DIRECTORIES 
+      ${CMAKE_INSTALL_PREFIX}/lib ./lib
+      ${CMAKE_INSTALL_PREFIX}/include ./include
+    )
+  else()
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libzstd1, libssl3")
+    set(CPACK_DEBIAN_PACKAGE_NAME MADS)
+    set(CPACK_GENERATOR "DEB")
+  endif()
+  include(CPack)
+  message(STATUS "Packaging enabled")
 else()
-  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libzstd1, libssl3")
-  set(CPACK_DEBIAN_PACKAGE_NAME MADS)
-  set(CPACK_GENERATOR "DEB")
+  message(STATUS "Packaging not available: to enable it, set MADS_SKIP_EXTERNALS to ON")
 endif()
-include(CPack)
-
 
 #   ____                                        _        _   _             
 #  |  _ \  ___   ___ _   _ _ __ ___   ___ _ __ | |_ __ _| |_(_) ___  _ __  
