--- a/src/mads.hpp.in
+++ b/src/mads.hpp.in
@@ -36,6 +36,7 @@ Author(s): Paolo Bosetti
 
 #define LIB_NAME "@APP_NAME@"
 #define LIB_VERSION "@PROJECT_VERSION@"
+#define MADS_PREFIX "@PREFIX@"
 
 #define LOGGER_STATUS_TOPIC "logger_status"
 
