mads.ini file is no more installed: needs to be generated with mads ini

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -318,9 +318,9 @@ install(TARGETS ${TARGET_LIST}
   ARCHIVE DESTINATION lib
   COMPONENT MADS
 )
-install(FILES ${CMAKE_CURRENT_LIST_DIR}/mads.ini
-  TYPE SYSCONF
-)
+# install(FILES ${CMAKE_CURRENT_LIST_DIR}/mads.ini
+#   TYPE SYSCONF
+# )
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/share/templates
   DESTINATION share
   COMPONENT MADS
