more options to mads command

--- a/share/templates/CMakeLists.txt
+++ b/share/templates/CMakeLists.txt
@@ -98,8 +98,16 @@ add_plugin({{name}})
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   set_property(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE ${USR_DIR})
 endif()
-install(TARGETS ${TARGET_LIST}
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
-  ARCHIVE DESTINATION lib
-)
+if(APPLE)
+  install(TARGETS ${TARGET_LIST}
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION lib
+    ARCHIVE DESTINATION lib
+  )
+else()
+  install(TARGETS ${TARGET_LIST}
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+    ARCHIVE DESTINATION lib
+  )
+endif()
