Added sw update function to mads command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,8 +136,15 @@ FetchContent_Declare(plugin
   GIT_SHALLOW    TRUE
 )
 
-FetchContent_MakeAvailable(tomlplusplus nlohmann_json cxxopts rang pugg)
+FetchContent_Declare(httplib
+  GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
+  GIT_TAG        HEAD
+  GIT_SHALLOW    TRUE
+)
+
+FetchContent_MakeAvailable(tomlplusplus nlohmann_json cxxopts rang pugg httplib)
 FetchContent_Populate(plugin)
+# FetchContent_Populate(httplib)
 
 FetchContent_Declare(inja
   GIT_REPOSITORY https://github.com/pantor/inja.git
@@ -234,6 +241,7 @@ endif()
 
 # Main command
 add_executable(mads ${MAIN_DIR}/mads.cpp)
+target_link_libraries(mads httplib::httplib)
 list(APPEND TARGET_LIST mads)
 
 create_exec(filter SRCS plugin_loader.cpp LIBS pugg ${DLOPEN_LIB} DEFS "PLUGIN_LOADER_FILTER")
