--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
+# cmake_minimum_required(VERSION 3.5...3.27)
 
 #   ____       _   _   _                 
 #  / ___|  ___| |_| |_(_)_ __   __ _ ___ 
